[tool.poetry]
name = "networks"
version = "0.1.0"
description = ""
authors = ["Victor S. Miller <algebravic@fb.com>"]

[tool.poetry.dependencies]
python = "^3.9"
svglib = "^1.3.0"
svgwrite = "^1.4.2"
python-sat = "^0.1.7-alpha.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
